Added assignment definition in yaml. Get request for assignment now also returns the id of the assigned job.
